@@ -14,3 +14,9 @@ dependencies {
     testImplementation("com.sun.activation:jakarta.activation:1.2.2")
   }
 }
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
